# continuitytheorykernal

./: README.md  THEORY_STATUS.md  open_questions.md
continuity-kernel/: LICENSE  README.md  pyproject.toml
continuity-kernel/continuity_kernel/: __init__.py  lens.py  model.py  prompt_pack.md  theory.json
continuity-kernel/docs/: anti_patterns.md  taxonomy.md  use_cases.md  what_continuity_lens_is_not.md
continuity-kernel/examples/: ecosystem_analysis.md  example_biological_system.md  example_consciousness.md  example_literary_analysis.md  example_risk_assessment.md  example_usage.py
